--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -131,7 +131,18 @@
             </header>
 
             <!-- welcome paragraph -->
-            
+            <section id="introduction_sect">
+                <h1>Welcome to the French Village</h1>
+                <p>
+                    We are pleased to present to you what we have to offer at
+                    the French Village. Our main focus is to preserve and share
+                    the beautiful fauna and flora unique to this region of
+                    Canada to everyone.
+                </p>
+
+                <!-- link to the about page -->
+                <a href="./about.html">Learn more about us</a>
+            </section>
 
             <!-- gallery section -->
             <section id="gallery_sect">
@@ -220,7 +231,57 @@
             </section>
 
             <!-- default footer -->
-           
+            <footer id="footer">
+                <!-- div used to create the reveal effect -->
+                <div id="topOpenning"></div>
+                <!-- wrapper for the footer -->
+                <div id="footerWrapper">
+                    <!-- first section of the footer -->
+                    <div id="footer_logo">
+                        <!-- logo -->
+                        <h1>French Village</h1>
+                        <!-- description of the site -->
+                        <p>
+                            French Village has an extensive amount of species
+                            and activities for you to experience. <br />
+                            Want to quickly know some of the top species and
+                            activities that we offer?
+                            <a href="./quiz.html">Take the short quiz.</a>
+                        </p>
+                    </div>
+
+                    <!-- second section of the footer -->
+                    <div id="location">
+                        <h3>Address</h3>
+                        <!-- link to the location on google map -->
+                        <a href="https://www.google.ca/maps" target="_blank">
+                            71 St Pauls Ln,<br />
+                            French Village, NS B3Z 4E3
+                        </a>
+                    </div>
+
+                    <!-- third section of the footer -->
+                    <div id="social">
+                        <h3>Connect with us</h3>
+                        <p>phone: 802 123 4568</p>
+                        <p id="email">
+                            Email:
+                            <a href="mailto:example@email.com">
+                                contact@frenchVillage.com
+                            </a>
+                        </p>
+                        <a href="https://www.facebook.com/" target="_blank"
+                            >Facebook</a
+                        >
+                        <a href="https://twitter.com/" target="_blank"
+                            >Twitter</a
+                        >
+                        <a href="https://www.youtube.com/" target="_blank"
+                            >Youtube</a
+                        >
+                    </div>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
