--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -133,7 +133,7 @@
             <!-- welcome paragraph -->
            
 
-            <!-- gallery section -->
+            <!-- gallery section
             <section id="gallery_sect">
                 <span class="sect_title">
                     <h1>Fauna & Flora</h1>
@@ -157,7 +157,7 @@
                         >Explore More</a
                     >
                 </div>
-            </section>
+            </section> -->
 
             <!-- map section -->
             <section id="map_sect">
