--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -133,8 +133,8 @@
             <!-- welcome paragraph -->
            
 
-            <!-- gallery section
-              <section id="gallery_sect">
+            <!-- gallery section-->
+               <section id="gallery_sect">
                 <span class="sect_title">
                     <h1>Fauna & Flora</h1>
                     <p>Explore our beutiful fauna and flora.</p>
@@ -157,7 +157,7 @@
                         >Explore More</a
                     >
                 </div>
-            </section> --> 
+            </section>  
 
             <!-- map section -->
             <section id="map_sect">
