--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -143,7 +143,7 @@
                     </h5>
                 </span>
 
-                <div id="gallery">
+                <!-- <div id="gallery">
                     <a tabindex="-1" href="./conservation.html">
                         <img src="./assets/toad4.jpg" />
                     </a>
@@ -157,7 +157,7 @@
                         >Explore More</a
                     >
                 </div>
-            </section>  
+            </section>   -->
 
             <!-- map section -->
             <section id="map_sect">
