Tab index in galley gone along with tab navigation in index.js

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -144,13 +144,13 @@
                 </span>
 
                 <div id="gallery">
-                    <a tabindex="-1" href="./conservation.html">
+                    <a  href="./conservation.html">
                         <img src="./assets/toad4.jpg" />
                     </a>
-                    <a tabindex="-1" href="./conservation.html">
+                    <a  href="./conservation.html">
                         <img src="./assets/Genus Sphagnum.jpg" />
                     </a>
-                    <a tabindex="-1" href="./conservation.html">
+                    <a  href="./conservation.html">
                         <img src="./assets/Genus Dryopteris3.jpg" />
                     </a>
                     <a id="explore_more" href="./conservation.html"
