links in .gallery div gone

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -144,7 +144,7 @@
                 </span>
 
                 <div id="gallery">
-                    <a  href="./conservation.html">
+                    <!-- <a  href="./conservation.html">
                         <img src="./assets/toad4.jpg" />
                     </a>
                     <a  href="./conservation.html">
@@ -155,7 +155,7 @@
                     </a>
                     <a id="explore_more" href="./conservation.html"
                         >Explore More</a
-                    >
+                    > -->
                 </div>
             </section>  
 
