--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -136,11 +136,11 @@
             <!-- gallery section-->
                <section id="gallery_sect">
                 <span class="sect_title">
-                    <h1>Fauna & Flora</h1>
+                    <!-- <h1>Fauna & Flora</h1>
                     <p>Explore our beutiful fauna and flora.</p>
                     <h5>
                         Click on explore more bellow to view the whole gallery.
-                    </h5>
+                    </h5> -->
                 </span>
 
                 <div id="gallery">
