rewilding , senior trial and natural burial commented expect their indicators

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -78,34 +78,34 @@
                 <!-- description container  -->
                 <div id="description">
                     <!-- Senior Trail -->
-                    <span class="text_content">
+                    <!-- <span class="text_content">
                         <h2>Senior Trail</h2>
                         <h3>Beautiful trail for all ages</h3>
                         <p>
                             French Village has trail designed to be accessible
                             by people of all ages.
                         </p>
-                    </span>
+                    </span> -->
 
                     <!-- Natural Burial -->
-                    <span class="text_content">
+                    <!-- <span class="text_content">
                         <h2>Natural Burial</h2>
                         <h3>Return to nature</h3>
                         <p>
                             The first natural burial area in Halifax, allowing
                             you to burry your love ones in nature.
                         </p>
-                    </span>
+                    </span> -->
 
                     <!-- Re-Wilding Area -->
-                    <span class="text_content">
+                    <!-- <span class="text_content">
                         <h2>Re-Wilding Area</h2>
                         <h3>Planting trees for the future</h3>
                         <p>
                             French Village is fill we with the most exquisite
                             fauna and flora nature has to offer.
                         </p>
-                    </span>
+                    </span> -->
 
                     <!-- indicator for the cainter text and header image -->
                     <div id="slider_indicator">
