Now the images of these texts for senior, rewilding , burial commented

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -71,9 +71,9 @@
             <header>
                 <!-- main image for the header -->
                 <div id="img_container">
-                    <img src="./assets/senior trail.jpg" />
+                    <!-- <img src="./assets/senior trail.jpg" />
                     <img src="./assets/Natural burial.jpg" />
-                    <img src="./assets/rewilding.jpg" />
+                    <img src="./assets/rewilding.jpg" /> -->
                 </div>
                 <!-- description container  -->
                 <div id="description">
