Elements inside nav back

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -47,7 +47,23 @@
         <a class="skip_link" href="#main_content">Skip navbar</a>
         <!-- navigation bar at the top of the page -->
          <nav>
-            
+            <!-- Logo of the website which is also a link to the homepage -->
+            <a href="./index.html" id="logo" title="homepage">French Village</a>
+            <!-- menu button which is only visible when on mobile -->
+            <button id="menu"><p>Menu</p></button>
+            <!-- list of the pages on the webpage -->
+            <ul>
+                <!-- link to the conservation page -->
+                <li><a href="./conservation.html">Conservations</a></li>
+                <!-- link to the store page -->
+                <li><a href="./store.html">Store</a></li>
+                <!-- link to the about us page -->
+                <li><a href="./about.html">About</a></li>
+                <!-- link to the quiz page -->
+                <li><a href="./quiz.html">Quiz</a></li>
+                <!-- link to the contact page -->
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
         </nav> 
 
         <main id="main_content">
