French village link commented

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -48,7 +48,7 @@
         <!-- navigation bar at the top of the page -->
          <nav>
             <!-- Logo of the website which is also a link to the homepage -->
-            <a href="./index.html" id="logo" title="homepage">French Village</a>
+            <!-- <a href="./index.html" id="logo" title="homepage">French Village</a> -->
             <!-- menu button which is only visible when on mobile -->
             <button id="menu"><p>Menu</p></button>
             <!-- list of the pages on the webpage -->
