Indicators for rewilding , burial, trial have been styled to display none

--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -108,7 +108,7 @@
                     </span> -->
 
                     <!-- indicator for the cainter text and header image -->
-                    <div id="slider_indicator">
+                     <div id="slider_indicator" style="display:none">
                         <!-- Senior Trail indicator button-->
                         <button class="indicator_container">
                             <div class="indicator"><div></div></div>
@@ -126,7 +126,7 @@
                             <div class="indicator"><div></div></div>
                             <p>Re-Wilding Area</p>
                         </button>
-                    </div>
+                    </div> 
                 </div>
             </header>
 
