--- a/pages/newmap/client/index.html
+++ b/pages/newmap/client/index.html
@@ -134,7 +134,7 @@
            
 
             <!-- gallery section-->
-               <section id="gallery_sect">
+               <section id="gallery_sect" style="display:none">
                 <span class="sect_title">
                     <!-- <h1>Fauna & Flora</h1>
                     <p>Explore our beutiful fauna and flora.</p>
