Link to newmap added

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li><a href="pages/quiz/game.php">Quiz</a></li>
                 <li><a href="pages/e-commerce/estore.html">Marketplace</a></li>
                 <li><a href="pages/geolocation/FV.html">Geolocation</a></li>
-                <li><a href="pages/newmap/client/index.html">Geolocation</a></li>
+                <li><a href="pages/newmap/client/index.html">Map</a></li>
               </ul>
             </nav>
           </div>
