--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                 <li><a href="pages/e-commerce/estore.html">Marketplace</a></li>
                 <li><a href="pages/geolocation/FV.html">Geolocation</a></li>
                 <li><a href="pages/newmap/client/index.html">Map</a></li>
+                <li><a href="pages/gallery/gallery.php">Gallery</a></li>
+                <li><a href="pages/gallery/submit_pic.php">Photo Upload</a></li>
               </ul>
             </nav>
           </div>
