Conservation html chnaged by removing nav

--- a/pages/newmap/client/conservation.html
+++ b/pages/newmap/client/conservation.html
@@ -46,7 +46,7 @@
         <!-- skip link to skip the navbar -->
         <a class="skip_link" href="#main_content">Skip navbar</a>
         <!-- navigation bar at the top of the page -->
-        <nav>
+        <nav style="display: none;">
             <!-- Logo of the website which is also a link to the homepage -->
             <a href="./index.html" id="logo" title="homepage">French Village</a>
             <!-- menu button which is only visible when on mobile -->
