Links included from index to conserv

--- a/pages/newmap/client/conservation.html
+++ b/pages/newmap/client/conservation.html
@@ -37,6 +37,26 @@
         <!-- Programmer defined css for this page -->
         <link rel="stylesheet" href="./style/conservation.css" />
 
+        <!--Links from index.html at main page-->
+        <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+
         <!-- Programmer defined default scripts -->
         <script src="./script/script.js" defer></script>
         <!-- Programmer defined script for this page -->
