--- a/pages/newmap/client/conservation.html
+++ b/pages/newmap/client/conservation.html
@@ -57,6 +57,7 @@
     />
     <link rel="stylesheet" href="./../../../styles/nav.css" />
     <link rel="stylesheet" href="./../../../styles/header.css" />
+    <link rel="stylesheet" href="../../../styles/index.css" />
 
 
         <!-- Programmer defined default scripts -->
