--- a/pages/newmap/client/conservation.html
+++ b/pages/newmap/client/conservation.html
@@ -58,6 +58,7 @@
     <link rel="stylesheet" href="./../../../styles/nav.css" />
     <link rel="stylesheet" href="./../../../styles/header.css" />
     <link rel="stylesheet" href="../../../styles/index.css" />
+    <link rel="stylesheet" href="../../styles/body.css" />
 
 
         <!-- Programmer defined default scripts -->
