links of menu fixed

--- a/pages/newmap/client/conservation.html
+++ b/pages/newmap/client/conservation.html
@@ -110,12 +110,12 @@
                              <!--Links to alternative pages in the navbar-->
                              <!--Double click on the 'Accessibility Mode' button calls seniorFunction()-->
                             
-                             <li><a href="../../pages/about/about.html">About</a></li>
-                             <li><a href="../../pages/ecosystem/ecosystem.html">Ecosystem</a></li>
-                             <li><a href="../../pages/map/map.html">Map</a></li>
-                             <li><a href="../../pages/burial/burial.html">Burial</a></li>
-                             <li><a href="../../pages/quiz/game.php">Quiz</a></li>
-                             <li><a href="../../pages/e-commerce/estore.html">Marketplace</a></li>
+                             <li><a href="../../../pages/about/about.html">About</a></li>
+                             <li><a href="../../../pages/ecosystem/ecosystem.html">Ecosystem</a></li>
+                             <li><a href="../../../pages/map/map.html">Map</a></li>
+                             <li><a href="../../../pages/burial/burial.html">Burial</a></li>
+                             <li><a href="../../../pages/quiz/game.php">Quiz</a></li>
+                             <li><a href="../../../pages/e-commerce/estore.html">Marketplace</a></li>
              
                            </ul>
                          </nav>
