menu bar links adjusted

--- a/pages/newmap/client/conservation.html
+++ b/pages/newmap/client/conservation.html
@@ -67,7 +67,7 @@
          <script src="./script/conservation.js" defer></script>
      </head>
      <body>
-         <!-- skip link to skip the navbar -->
+         <!-- original navbar is not displayed-->
          <a class="skip_link" href="#main_content">Skip navbar</a>
          <!-- navigation bar at the top of the page -->
          <nav style="display: none;">
@@ -96,7 +96,7 @@
                  <div class="header-container">
                      <div class="org-name">
                        <!--Links back to homepage if clicked-->
-                       <a class="org-logo" href="../../index.html"></a>
+                       <a class="org-logo" href="../../../index.html"></a>
                        <!--Links back to homepage if clicked-->
                        <p>
                          <a href="../../../index.html">French Village Forest <b>Conservation</b></a>
@@ -110,12 +110,12 @@
                              <!--Links to alternative pages in the navbar-->
                              <!--Double click on the 'Accessibility Mode' button calls seniorFunction()-->
                             
-                             <li><a href="../../pages/about/about.html">About</a></li>
-                             <li><a href="../../pages/ecosystem/ecosystem.html">Ecosystem</a></li>
-                             <li><a href="../../pages/map/map.html">Map</a></li>
-                             <li><a href="../../pages/burial/burial.html">Burial</a></li>
-                             <li><a href="../../pages/quiz/game.php">Quiz</a></li>
-                             <li><a href="../../pages/e-commerce/estore.html">Marketplace</a></li>
+                             <li><a href="../../about/about.html">About</a></li>
+                             <li><a href="../../ecosystem/ecosystem.html">Ecosystem</a></li>
+                             <li><a href="../../map/map.html">Map</a></li>
+                             <li><a href="../../burial/burial.html">Burial</a></li>
+                             <li><a href="../../quiz/game.php">Quiz</a></li>
+                             <li><a href="../../e-commerce/estore.html">Marketplace</a></li>
              
                            </ul>
                          </nav>
