--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <li><a href="pages/burial/burial.html">Burial</a></li>
                 <li><a href="pages/quiz/game.php">Quiz</a></li>
                 <li><a href="pages/e-commerce/estore.html">Marketplace</a></li>
-                <!-- <li><a href="pages/geolocation/FV.html">Geolocation</a></li> -->
+                <li><a href="pages/geolocation/FV.html">Geolocation</a></li>
                 <li><a href="pages/newmap/client/index.html">Map</a></li>
                 <li><a href="pages/newmap/client/conservation.html">Gallery</a></li>
                 <li><a href="pages/newmap/admin/index.html">Photo Upload</a></li>
