link for new item gone

--- a/pages/newmap/admin/index.html
+++ b/pages/newmap/admin/index.html
@@ -17,7 +17,7 @@
         <h1>French Village Admin Panel</h1>
         <div id="optionSect">
             <a class="options" href="./newSpecies.html">New Species</a>
-            <a class="options" href="./newItem.html">New Item</a>
+            <!-- <a class="options" href="./newItem.html">New Item</a> -->
             
         </div>
     </body>
