New links added to the head

--- a/pages/geolocation/FV.html
+++ b/pages/geolocation/FV.html
@@ -7,7 +7,7 @@ Geolocation information for the user
 Images of various locations, to be replaced with photos of the site
 Audio framework to allow for easy implementation of the audio files
 
-Work done by: François Couture, Jalen Pinder, Mohamed Aly, and Alexander Mack
+Work done by: Franï¿½ois Couture, Jalen Pinder, Mohamed Aly, and Alexander Mack
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -31,6 +31,28 @@ Work done by: François Couture, Jalen Pinder, Mohamed Aly, and Alexander Mack
     <script src="mapScript.js"></script>
     <!--Requests and Imports the Bootstrap Script && Kit-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!--New links-->
+    <link
+       rel="stylesheet"
+       href="path/to/font-awesome/css/font-awesome.min.css"
+     />
+     <link
+       rel="stylesheet"
+       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+     />
+     <link
+       rel="stylesheet"
+       type="text/css"
+       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+     />
+     <link
+       rel="stylesheet"
+       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+     />
+     <link rel="stylesheet" href="./../../../styles/nav.css" />
+     <link rel="stylesheet" href="./../../../styles/header.css" />
+     <link rel="stylesheet" href="../../../styles/index.css" />
+     <link rel="stylesheet" href="../../styles/body.css" />
     <!-- website title -->
     <title>French Village</title>
 </head>
